src/test/ui/closures/2229_closure_analysis/capture-analysis-1.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/capture-analysis-1.rs:18:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

warning: the feature `capture_disjoint_fields` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/capture-analysis-1.rs:2:12
   |
LL | #![feature(capture_disjoint_fields)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #53488 <https://github.com/rust-lang/rust/issues/53488> for more information

error: First Pass analysis includes:
  --> $DIR/capture-analysis-1.rs:21:5
   |
LL | /     || {
LL | |
LL | |
LL | |         println!("{:?}", p);
...  |
LL | |
LL | |     };
   | |_____^
   |
note: Capturing p[] -> ImmBorrow
  --> $DIR/capture-analysis-1.rs:24:26
   |
LL |         println!("{:?}", p);
   |                          ^
note: Capturing p[(0, 0)] -> ImmBorrow
  --> $DIR/capture-analysis-1.rs:27:26
   |
LL |         println!("{:?}", p.x);
   |                          ^^^
note: Capturing q[(0, 0)] -> ImmBorrow
  --> $DIR/capture-analysis-1.rs:30:26
   |
LL |         println!("{:?}", q.x);
   |                          ^^^
note: Capturing q[] -> ImmBorrow
  --> $DIR/capture-analysis-1.rs:32:26
   |
LL |         println!("{:?}", q);
   |                          ^

error: Min Capture analysis includes:
  --> $DIR/capture-analysis-1.rs:21:5
   |
LL | /     || {
LL | |
LL | |
LL | |         println!("{:?}", p);
...  |
LL | |
LL | |     };
   | |_____^
   |
note: Min Capture p[] -> ImmBorrow
  --> $DIR/capture-analysis-1.rs:24:26
   |
LL |         println!("{:?}", p);
   |                          ^
note: Min Capture q[] -> ImmBorrow
  --> $DIR/capture-analysis-1.rs:32:26
   |
LL |         println!("{:?}", q);
   |                          ^

error: aborting due to 3 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0658`.
